<resources>
    <string name="app_name">Express Taxi Conductor</string>
    <string name="login">Ingresar</string>
    <string name="link_create_account">¿No tienes cuenta aún? Registrate</string>
    <string name="pass">Contraseña *</string>
    <string name="email">Correo Electrónico *</string>
    <string name="express_taxi">Express Taxi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Express Taxi</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation_drawer">k</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">Registro</string>
    <string name="registrar">Registrar</string>
    <string name="confirmar_pass">Confirmar contraseña *</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="center_ubication">Centrar ubicación</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="register_your_car">Registra tu vehiculo</string>
    <string name="model">Modelo *</string>
    <string name="brand">Marca *</string>
    <string name="identificator">Placas *</string>
    <string name="color">Color *</string>
    <string name="cancel">Cancelar</string>
    <string name="register_finish">Concluir</string>
    <string name="full_name">Nombre completo *</string>
    <string name="full_lastname">Apellidos *</string>
    <string name="phone">Telefono</string>
    <string name="continuar">Continuar</string>
    <string name="ic_loc">ic_loc</string>
    <string name="accept_service">Confirmar servicio</string>
    <string name="ic_myloc">ic_myloc</string>
    <string name="hint_send_message">Escribe un mensaje</string>
    <string name="details_customer">Detalles del cliente</string>
    <string name="img_customer">Imagen cliente</string>
    <string name="name_customer">Marco</string>
    <string name="lastname_customer">Lopez</string>
    <string name="chat">Chat</string>
    <string name="details_trip">Detalles del viaje</string>
    <string name="from_service">De Antonio Barona Cuernavaca</string>
    <string name="to_service">Para UTEZ Emiliano Zapata</string>
    <string name="start_service">Iniciar trayecto</string>
    <string name="llegue">Ya llegué</string>
    <string name="cancel_service">Cancelar servicio</string>
    <string name="finish_service">Terminar trayecto</string>
    <string name="text_received_message">This is a received message</string>
    <string name="text_sent_message">This is a sent message</string>
    <string name="title_map">Inicio</string>
    <string name="title_nav_signout">Cerrar sesión</string>
    <string name="default_notification_channel_id">om.app.expresstaxi.channel</string>
    <string name="version">Versión 1.0.0</string>
    <string name="copy_right">© 2021 Developers UTEZ</string>
    <string name="about">Acerca de</string>
    <string name="description">App que permite a las personas solicitar un conductor para llegar a su destino deseado, asimismo, a las personas que disponen de un coche les permite ofrecer el servicio de chofer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>