<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryVariant"
    android:gravity="center"
    android:scrollbars="none"
    android:padding="15dp"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/colorPrimaryVariant"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/express_taxi"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:textStyle="bold"
            android:textSize="50sp"
            android:textColor="@color/white"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="10dp"
            app:boxBackgroundMode="outline"
            app:hintTextColor="@color/white"
            app:boxStrokeWidth="@dimen/cardview_default_elevation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"

            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtEmail"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:boxStrokeWidth="@dimen/cardview_default_elevation"
            android:hint="@string/pass"
            app:hintTextColor="@color/white"
            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"

            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link_create_account"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_margin="10dp"
            android:textSize="15sp"

            android:textColor="@color/white"
            android:id="@+id/txtSignup"/>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:padding="15dp"
            android:gravity="center"
            android:id="@+id/btnLogin"/>
    </LinearLayout>


</ScrollView>